tests/snapshots/cli__fix_repairs_markdown_style_then_a_re_check_is_clean.snap
---
source: tests/cli.rs
info:
  program: aigarden
  args:
    - check
    - "--fix"
---
success: true
exit_code: 0
----- stdout -----
✓ aigarden: checked 1 file, no findings

----- stderr -----
