tests/snapshots/cli__fix_rewrites_file_contents.snap
---
source: tests/cli.rs
expression: fixed
---
# Title

Para one.

Para two with a    tab.

```text
fenced
```

After the fence.
