tests/snapshots/cli__frozen_terminal_doc_exempts_a_bare_path_a_live_doc_does_not.snap
---
source: tests/cli.rs
info:
  program: ailint
  args:
    - check
---
success: false
exit_code: 1
----- stdout -----
error[bare-path]: bare path `docs/gone.md` does not exist
 --> issues/0002-live.md:5:19
  |
5 | Still references `docs/gone.md`.
  |                   ^^^^^^^^^^^^
ailint: 1 finding

----- stderr -----
