tests/snapshots/cli__guidance_files_in_hidden_dirs_are_walked.snap
---
source: tests/cli.rs
info:
  program: aigarden
  args:
    - check
---
success: false
exit_code: 1
----- stdout -----
error[import-target]: import `@../missing.md` does not resolve
 --> .claude/skills/x/SKILL.md:1:2
  |
1 | @../missing.md
  |  ^^^^^^^^^^^^^ a broken @-import fails silently at load time
aigarden: 1 finding

----- stderr -----
