tests/snapshots/cli__import_target_flags_a_broken_at_import.snap
---
source: tests/cli.rs
info:
  program: ailint
  args:
    - check
---
success: false
exit_code: 1
----- stdout -----
error[import-target]: import `@docs/missing.md` does not resolve
 --> CLAUDE.md:1:2
  |
1 | @docs/missing.md
  |  ^^^^^^^^^^^^^^^ a broken @-import fails silently at load time
ailint: 1 finding

----- stderr -----
