tests/snapshots/cli__later_override_reenables_a_rule_for_a_narrower_glob.snap
---
source: tests/cli.rs
info:
  program: ailint
  args:
    - check
---
success: false
exit_code: 1
----- stdout -----
error[code-doc-ref]: doc path `docs/gone.md` cited here does not exist
 --> src/keep.rs:1:8
  |
1 | // see docs/gone.md
  |        ^^^^^^^^^^^^
ailint: 1 finding

----- stderr -----
