tests/snapshots/cli__markdown_style_flags_trailing_spaces_and_missing_final_newline.snap
---
source: tests/cli.rs
info:
  program: aigarden
  args:
    - check
---
success: false
exit_code: 1
----- stdout -----
error[markdown-style]: [MD009] 3 trailing spaces found
 --> s.md:3:21
  |
3 | A line with trailing   
  |                     ^^^
error[markdown-style]: [MD031] No blank line before fenced code block
 --> s.md:4:1
  |
4 | ```text
  | ^^^^^^^
error[markdown-style]: [MD047] File should end with a single newline character
 --> s.md:8:5
  |
8 | last
  |     ^
aigarden: 3 findings

----- stderr -----
