tests/snapshots/cli__mv_reanchored_moved_file.snap
---
source: tests/cli.rs
expression: "fs::read_to_string(dir.path().join(\"sub/doc.md\")).unwrap()"
---
Link to [sib](../sibling.md).
